--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/im_avatar"
                 android:padding="5dp"
                 android:src="@drawable/ic_person"
                 android:background="@drawable/bg_circle_white"
@@ -54,13 +55,15 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/login_please"
                     android:textSize="18dp"
-                    app:fontFamily="@font/rubik_medium" />
+                    app:fontFamily="sans-serif-medium" />
 
                 <TextView
+                    android:id="@+id/view_infoaccount"
                     android:layout_marginTop="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
