--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -154,6 +154,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/view_signout"
+        android:visibility="gone"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
