--- a/app/src/main/res/layout/activity_info_account.xml
+++ b/app/src/main/res/layout/activity_info_account.xml
@@ -195,16 +195,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
-        <!--<TextView-->
-            <!--android:textColor="@color/white"-->
-            <!--android:gravity="center"-->
-            <!--android:background="@drawable/bg_square_yellow"-->
-            <!--android:layout_weight="0.25"-->
-            <!--android:textSize="14sp"-->
-            <!--android:id="@+id/tv_sex"-->
-            <!--android:text="felmale"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="30dp" />-->
         <RadioGroup
             android:id="@+id/radioGrp"
             android:layout_width="wrap_content"
@@ -294,6 +284,7 @@
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
