--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -25,6 +25,15 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/black"
+            android:id="@+id/tv_name"
+            android:text="345 Nguyen Thi Minh Khai, Quan 1, TP HCM"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
             android:id="@+id/tv_address"
             android:text="345 Nguyen Thi Minh Khai, Quan 1, TP HCM"
             android:textSize="12sp"
