--- a/app/src/main/res/layout/activity_info_account.xml
+++ b/app/src/main/res/layout/activity_info_account.xml
@@ -45,6 +45,15 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <TextView
         android:layout_marginBottom="8dp"
         android:textColor="@color/black"
@@ -289,4 +298,7 @@
         android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
