--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,6 +77,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/view_blog"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical"
