--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -14,6 +14,7 @@
         android:background="?attr/colorPrimary">
 
         <TextView
+            android:id="@+id/tv_header"
             android:visibility="visible"
             android:textSize="22sp"
             android:layout_weight="1"
@@ -26,6 +27,14 @@
             android:layout_height="wrap_content" />
 
     </android.support.v7.widget.Toolbar>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <android.support.v4.view.ViewPager
         android:layout_marginLeft="8dp"
@@ -41,5 +50,8 @@
         android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
