--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -147,6 +147,7 @@
                 android:layout_height="28dp">
 
                 <TextView
+                    android:id="@+id/tv_count"
                     android:textSize="14sp"
                     android:textColor="@color/white"
                     android:text="1"
@@ -156,6 +157,7 @@
         </FrameLayout>
 
         <TextView
+            android:id="@+id/tv_moneyAll"
             android:layout_weight="0.6"
             android:layout_marginLeft="8dp"
             android:layout_gravity="center"
@@ -167,6 +169,7 @@
 
 
         <TextView
+            android:id="@+id/btn_delivery"
             android:paddingRight="5dp"
             android:drawableEnd="@drawable/next_white"
             android:gravity="center"
