--- a/app/src/main/res/layout/fragment_retaurantdetail_delivery.xml
+++ b/app/src/main/res/layout/fragment_retaurantdetail_delivery.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -176,5 +180,75 @@
             </LinearLayout>
 
     </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/view_delivery"
+        android:weightSum="1"
+        android:background="@color/black"
+        android:orientation="horizontal"
+        android:layout_gravity="end|bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
 
-</android.support.v4.widget.NestedScrollView>
+        <FrameLayout
+            android:layout_marginLeft="8dp"
+            android:layout_gravity="center"
+            android:layout_weight="0.2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:src="@drawable/basket"
+                android:layout_width="32dp"
+                android:layout_height="32dp" />
+
+            <LinearLayout
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="end"
+                android:background="@drawable/bg_circle_blue"
+                android:layout_width="28dp"
+                android:layout_height="28dp">
+
+                <TextView
+                    android:id="@+id/tv_count"
+                    android:textSize="14sp"
+                    android:textColor="@color/white"
+                    android:text="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_moneyAll"
+            android:layout_weight="0.6"
+            android:layout_marginLeft="8dp"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:text="50,000VND"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+        <TextView
+            android:id="@+id/btn_delivery"
+            android:paddingRight="5dp"
+            android:drawableEnd="@drawable/next_white"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:text="@string/delevery"
+            android:layout_weight="0.2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableRight="@drawable/next_white" />
+
+    </LinearLayout>
+
+</FrameLayout>
