--- a/app/src/main/res/layout/item_menu_order.xml
+++ b/app/src/main/res/layout/item_menu_order.xml
@@ -4,7 +4,7 @@
     android:layout_marginBottom="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_count"
