--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone"
         android:id="@+id/rcv_order_list"
         android:layout_width="match_parent"
