--- a/app/src/main/res/layout/item_history_on.xml
+++ b/app/src/main/res/layout/item_history_on.xml
@@ -1,149 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:paddingBottom="16dp"
-    android:background="@color/white"
+    android:padding="16dp"
+    android:background="@color/grey"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:src="@drawable/order_on"
-        android:layout_width="76dp"
-        android:layout_height="76dp" />
-
-    <TextView
-        android:id="@+id/tv_status"
-        android:textColor="@color/black"
-        android:text="@string/on_dispatch"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <LinearLayout
+        android:padding="8dp"
+        android:paddingBottom="24dp"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/tv_date"
+            android:text="12/12/2018"
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/order_on"
+            android:layout_width="76dp"
+            android:layout_height="76dp" />
+
+        <TextView
+            android:id="@+id/tv_status"
+            android:textColor="@color/black"
+            android:text="@string/on_sent"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
+            android:orientation="vertical"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_sent"
-                android:textColor="@color/red"
-                android:textSize="14sp"
-                android:text="@string/sent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_confirm"
-                android:layout_marginRight="20dp"
-                android:gravity="right"
-                android:layout_weight="1"
-                android:textSize="14sp"
-                android:text="@string/confirmed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tv_sent"
+                    android:textColor="@color/red"
+                    android:textSize="12sp"
+                    android:text="@string/sent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/tv_route"
+                <TextView
+                    android:id="@+id/tv_confirm"
+                    android:layout_marginRight="20dp"
+                    android:gravity="right"
+                    android:layout_weight="1"
+                    android:textSize="12sp"
+                    android:text="@string/confirmed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_route"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="12sp"
+                    android:text="@string/enroute"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_complete"
+                    android:layout_gravity="end"
+                    android:textSize="12sp"
+                    android:text="@string/delivered"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:gravity="center"
-                android:layout_weight="1"
-                android:textSize="14sp"
-                android:text="@string/enroute"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_complete"
-                android:layout_gravity="end"
-                android:textSize="14sp"
-                android:text="@string/delivered"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <ImageView
+                    android:id="@+id/im_sent"
+                    android:src="@drawable/bg_circle_green"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
+
+                <View
+                    android:id="@+id/v_confirm"
+                    android:layout_gravity="center"
+                    android:background="@color/grey"
+                    android:layout_width="80dp"
+                    android:layout_height="5dp"/>
+
+                <ImageView
+                    android:id="@+id/im_confirm"
+                    android:src="@drawable/bg_circle_grey"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
+
+                <View
+                    android:id="@+id/v_route"
+                    android:layout_gravity="center"
+                    android:background="@color/grey"
+                    android:layout_width="80dp"
+                    android:layout_height="5dp"/>
+
+                <ImageView
+                    android:id="@+id/im_route"
+                    android:src="@drawable/bg_circle_grey"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
+                <View
+                    android:id="@+id/v_complete"
+                    android:layout_gravity="center"
+                    android:background="@color/grey"
+                    android:layout_width="80dp"
+                    android:layout_height="5dp"/>
+
+                <ImageView
+                    android:id="@+id/im_complete"
+                    android:src="@drawable/bg_circle_grey"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:weightSum="1"
-            android:layout_marginRight="4dp"
-            android:layout_marginLeft="14dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_nameRes"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:text="Koi Thé"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-            <ImageView
-                android:id="@+id/im_sent"
-                android:src="@drawable/bg_circle_green"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
-
-            <View
-                android:id="@+id/v_confirm"
-                android:layout_gravity="center"
-                android:background="@color/grey"
-                android:layout_width="100dp"
-                android:layout_height="5dp"/>
-
-            <ImageView
-                android:id="@+id/im_confirm"
-                android:src="@drawable/bg_circle_grey"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
-
-            <View
-                android:id="@+id/v_route"
-                android:layout_weight=""
-                android:layout_gravity="center"
-                android:background="@color/grey"
-                android:layout_width="100dp"
-                android:layout_height="5dp"/>
-
-            <ImageView
-                android:id="@+id/im_route"
-                android:src="@drawable/bg_circle_grey"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
-            <View
-                android:id="@+id/v_complete"
-                android:layout_gravity="center"
-                android:background="@color/grey"
-                android:layout_width="100dp"
-                android:layout_height="5dp"/>
-
-            <ImageView
-                android:id="@+id/im_complete"
-                android:src="@drawable/bg_circle_grey"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
-
-        </LinearLayout>
+        <TextView
+            android:textColor="@color/black"
+            android:text="@string/thank_order"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_nameRes"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center"
-        android:text="Koi Thé"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:textColor="@color/black"
-        android:text="@string/thank_order"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </LinearLayout>
