--- a/app/src/main/res/layout/view_detail_order.xml
+++ b/app/src/main/res/layout/view_detail_order.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
    <LinearLayout
+       android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
@@ -21,12 +22,13 @@
                android:layout_height="wrap_content" />
 
            <TextView
+               android:fontFamily="sans-serif-medium"
                android:id="@+id/tv_nameRes"
                android:layout_marginLeft="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Tra sua Koi The - gysatdyadbgshdajhgdbsgdhgahdghagdhjagdhvbvfsdgafgdfa y"
-               android:textSize="14sp"
+               android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
@@ -83,6 +85,8 @@
            android:layout_height="0.5dp"/>
 
        <android.support.v7.widget.RecyclerView
+           app:layout_behavior="@string/appbar_scrolling_view_behavior"
+           android:id="@+id/rcv_menu"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
