--- a/app/src/main/res/layout/activity_change_address.xml
+++ b/app/src/main/res/layout/activity_change_address.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:background="@drawable/bg_edttext_none"
             android:layout_weight="1"
             android:id="@+id/edt_search_address"
             android:hint="@string/search_location"
