--- a/app/src/main/res/layout/item_menu_partner.xml
+++ b/app/src/main/res/layout/item_menu_partner.xml
@@ -22,6 +22,7 @@
             android:tag="Bottom3">
 
         <LinearLayout
+            android:id="@+id/btn_edit"
             android:gravity="center"
             android:background="@color/colorPrimary"
             android:layout_width="60dp"
@@ -34,6 +35,7 @@
 
         </LinearLayout>
             <LinearLayout
+                android:id="@+id/btn_delete"
                 android:gravity="center"
                 android:background="@color/red"
                 android:layout_width="60dp"
